--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+<!-- colores app principal !-->
+
+    <color name="background">#F5F5F5</color>
+    <color name="primary">#FF9D33</color>
+    <color name="card_color">#E7E7E7</color>
 </resources>
