--- a/app/src/main/res/layout/fragment_qr_window.xml
+++ b/app/src/main/res/layout/fragment_qr_window.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".presentation.QrWindow.QrWindowFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.journeyapps.barcodescanner.DecoratedBarcodeView
+        android:id="@+id/barcodeScannerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        />
 
 </FrameLayout>
