--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Base.Theme.TKet" parent="Theme.Material3.DayNight.NoActionBar">
-                <item name="android:statusBarColor">@color/primary</item>
+    <style name="Base.Theme.TKet" parent="Theme.Material3.Light.NoActionBar">
+                <item name="android:statusBarColor">@color/statusBar</item>
     </style>
 
     <style name="Theme.TKet" parent="Base.Theme.TKet" />
+
 </resources>
