--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,7 +8,16 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     tools:context=".presentation.login.LoginFragment">
-
+    <me.ibrahimsn.particle.ParticleView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:particleCount="60"
+        app:particleMinRadius="3"
+        app:particleMaxRadius="10"
+        app:particlesBackgroundColor="@color/background"
+        app:particleColor="@color/primary"
+        app:particleLineColor="@color/primary"
+        app:particleLinesEnabled="true" />
 
     <ImageView
         android:id="@+id/waves"
@@ -24,7 +33,6 @@
         android:id="@+id/Grid"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
