--- a/app/src/main/res/layout/fragment_event_info.xml
+++ b/app/src/main/res/layout/fragment_event_info.xml
@@ -1,37 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
 
     tools:context=".presentation.EventInfo.EventInfoFragment">
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+    <me.ibrahimsn.particle.ParticleView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        app:particleCount="60"
+        app:particleMinRadius="3"
+        app:particleMaxRadius="10"
+        app:particlesBackgroundColor="@color/background"
+        app:particleColor="@color/primary"
+        app:particleLineColor="@color/primary"
+        app:particleLinesEnabled="true" />
+    <ImageView
+        android:id="@+id/waves"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/top_waves"
+        android:scaleType="fitStart"
+        tools:ignore="MissingConstraints" />
 
-
-    </LinearLayout>
     <androidx.gridlayout.widget.GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:layout_marginTop="110dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
         app:columnCount="1">
         <ImageView
-
+            android:src="@drawable/event_image"
             app:layout_gravity="center"
 
-            android:src="@drawable/Ellipse15">
-
+            >
 
         </ImageView>
         <TextView
+            android:id="@+id/nombreevento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="Nombre del Evento"
+            android:fontFamily="@font/ayaka"
             android:textSize="32sp"
             android:textStyle="bold"
             android:textAlignment="center"
@@ -43,27 +64,26 @@
             android:background="@color/primary"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginBottom="25dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="-15dp"
             >
 
 
         </FrameLayout>
         <FrameLayout
             android:id="@+id/EventFrame"
-            android:layout_width="400dp"
-            android:layout_height="300dp"
-            android:background="#E7E7E7"
-            app:layout_gravity="center_horizontal"
+            android:layout_width="390dp"
+            android:layout_height="wrap_content"
+            app:layout_gravity="center"
+            android:layout_marginTop="-70dp"
+            android:background="@drawable/quitar_dani"
 
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             >
 
             <androidx.gridlayout.widget.GridLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginTop="6dp"
                 app:columnCount="1"
                 >
 
@@ -74,24 +94,37 @@
                     android:layout_height="wrap_content"
                     android:text="Hora de inicio: x"
                     android:textAlignment="center"
+
+                    android:fontFamily="@font/ayaka"
                     android:textSize="25sp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
+                    app:layout_gravity="center"
                     />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Hora de final: x"
                     android:textAlignment="center"
+
+                    android:fontFamily="@font/ayaka"
                     android:textSize="25sp"
-                    android:layout_marginTop="5dp"/>
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    app:layout_gravity="center"
+                    />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Aforo disponible: x"
                     android:textAlignment="center"
+
+                    android:fontFamily="@font/ayaka"
                     android:textSize="25sp"
-                    android:layout_marginTop="5dp"/>
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    app:layout_gravity="center"
+                    />
 
                 <!-- Entradas validas -->
                 <TextView
@@ -99,9 +132,14 @@
                     android:layout_height="wrap_content"
                     android:text="Entradas validas: x"
                     android:textAlignment="center"
+
+                    android:fontFamily="@font/ayaka"
                     android:textSize="25sp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    app:layout_gravity="center"
                     />
+
 
 
                 <!-- Entradas no validas -->
@@ -110,13 +148,14 @@
                     android:layout_height="wrap_content"
                     android:text="Entradas no validas: x"
                     android:textAlignment="center"
+
+                    android:fontFamily="@font/ayaka"
                     android:textSize="25sp"
                     android:layout_marginTop="5dp"
+                    app:layout_gravity="center"
                     />
+
             </androidx.gridlayout.widget.GridLayout>
-
-
-
         </FrameLayout>
 
 
@@ -124,7 +163,4 @@
 
 
     </androidx.gridlayout.widget.GridLayout>
-
-
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
