--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,9 @@
     </style>
 
     <style name="Theme.TKet" parent="Base.Theme.TKet" />
-
+   <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
+       <item name="windowSplashScreenBackground">@color/primary</item>
+       <item name="windowSplashScreenAnimatedIcon">@drawable/logo_splash</item>
+       <item name="postSplashScreenTheme">@style/Base.Theme.TKet</item>
+   </style>
 </resources>
