--- a/app/src/main/res/layout/fragment_event_info.xml
+++ b/app/src/main/res/layout/fragment_event_info.xml
@@ -39,10 +39,14 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
         app:columnCount="1">
+
         <ImageView
+            android:id="@+id/imageEvent"
             android:src="@drawable/event_image"
             app:layout_gravity="center"
-
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:scaleType="fitXY"
             >
 
         </ImageView>
