--- a/app/src/main/res/layout/item_ticket.xml
+++ b/app/src/main/res/layout/item_ticket.xml
@@ -1,58 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="12dp"
+
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginStart="30dp"
-    android:layout_marginEnd="30dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
+    android:layout_height="wrap_content"
+    android:background="@color/background">
+    <!-- A CardView that contains a TextView -->
+    <androidx.cardview.widget.CardView
         android:layout_gravity="center"
-        android:background="@drawable/edit_text_rounded"
-        >
-        <FrameLayout
-            android:id="@+id/validate_zone"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:clickable="true"
-            android:onClick="dfs"
-            android:layout_marginStart="10dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="@drawable/validation_rounded"
-            >
-        </FrameLayout>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="#E7E7E7"
+        card_view:cardCornerRadius="40dp"
+        app:cardElevation="6dp"
+        app:contentPadding="4dp"
+        tools:ignore="MissingConstraints">
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nombre:"
-            android:textSize="12sp"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="13dp"
-            app:layout_constraintStart_toEndOf="@+id/validate_zone"
-            app:layout_constraintTop_toTopOf="@+id/validate_zone"
-            >
-        </TextView>
+            android:padding="16dp">
+            <FrameLayout
+                android:id="@+id/square_verification"
+                android:layout_width="80dp"
+                android:background="@drawable/validation_square"
+                android:layout_height="80dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                >
+            </FrameLayout>
 
+            <TextView
+                android:id="@+id/item_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="item_title"
+                android:fontFamily="@font/ayaka"
+                android:layout_toEndOf="@+id/square_verification"
+                android:textStyle="bold"
+                android:layout_toRightOf="@id/square_verification"
+                android:layout_alignParentTop="true"
+                android:textSize="15sp"
+                />
+            <TextView
+                android:id="@+id/item_dni"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="item_dni"
+                android:fontFamily="@font/ayaka"
+                android:layout_toEndOf="@+id/square_verification"
+                android:textStyle="bold"
+                android:layout_toRightOf="@id/square_verification"
+                android:layout_below="@+id/item_title"
+                android:textSize="15sp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="item_gid"
+                android:id="@+id/item_gid"
+                android:fontFamily="@font/ayaka"
+                android:layout_toEndOf="@+id/square_verification"
+                android:textStyle="bold"
+                android:layout_toRightOf="@id/square_verification"
+                android:layout_below="@+id/item_dni"
+                android:textSize="15sp"
+                />
 
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:id="@+id/dni"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DNI:"
-            android:textSize="12sp"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="18dp"
-            app:layout_constraintStart_toEndOf="@+id/validate_zone"
-            app:layout_constraintTop_toTopOf="@+id/name"
-            >
-        </TextView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
